[gd_scene load_steps=5 format=3 uid="uid://dgdtl8dga7hfu"]

[ext_resource type="Script" path="res://game/ui/textbox/textbox.gd" id="1_nnvnk"]
[ext_resource type="PackedScene" uid="uid://2fy1qxa14358" path="res://game/ui/textbox/dialogue_label.tscn" id="2_jlmye"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5d24i"]
content_margin_left = 40.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 0.25098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oj3c8"]
content_margin_left = 40.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
draw_center = false

[node name="TextBox" type="CanvasLayer"]
layer = 100
script = ExtResource("1_nnvnk")

[node name="Box" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 500.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 10

[node name="Balloon" type="ColorRect" parent="Box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0.501961)

[node name="TextMargin" type="MarginContainer" parent="Box/Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 10
metadata/_edit_layout_mode = 1

[node name="VBox" type="VBoxContainer" parent="Box/Balloon/TextMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CharacterLabel" type="RichTextLabel" parent="Box/Balloon/TextMargin/VBox"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Box/Balloon/TextMargin/VBox" instance=ExtResource("2_jlmye")]
unique_name_in_owner = true
layout_mode = 2
text = "Dialogue"

[node name="Responses" type="VBoxContainer" parent="Box/Balloon/TextMargin/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="ResponseTemplate" type="RichTextLabel" parent="Box/Balloon/TextMargin/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_5d24i")
theme_override_styles/normal = SubResource("StyleBoxFlat_oj3c8")
bbcode_enabled = true
text = "Response"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false

[node name="ProfileMargin" type="MarginContainer" parent="Box/Balloon"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 10

[node name="Profile" type="TextureRect" parent="Box/Balloon/ProfileMargin"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 5

[connection signal="gui_input" from="Box/Balloon" to="." method="_on_balloon_gui_input"]
